--- a/index.html
+++ b/index.html
@@ -4024,7 +4024,7 @@
                                     >
                                       <a
                                         class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-a3aacf3"
-                                        href="https://t.me/nanainueth"
+                                        href="https://t.me/Nana_Shiba_Inu"
                                         target="_blank"
                                       >
                                         <span class="elementor-screen-only"
@@ -4047,7 +4047,7 @@
                                     >
                                       <a
                                         class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-repeater-item-4893c9c"
-                                        href="https://x.com/nanainueth"
+                                        href="https://x.com/Nana_Shiba_Inu"
                                         target="_blank"
                                       >
                                         <span class="elementor-screen-only"
@@ -4428,7 +4428,7 @@
                             <h2
                               class="elementor-heading-title elementor-size-default"
                             >
-                              0x5f1444e0795ec094f3bf841775b7430cd52f7b41
+                              0xcomingsoon
                             </h2>
                           </div>
                         </div>
@@ -4448,7 +4448,7 @@
                             <div class="elementor-button-wrapper">
                               <a
                                 class="elementor-button elementor-button-link elementor-size-sm"
-                                href="https://etherscan.io/token/0x5f1444e0795ec094f3bf841775b7430cd52f7b41"
+                                href="https://etherscan.io/token/0xcomingsoon"
                               >
                                 <span class="elementor-button-content-wrapper">
                                   <span class="elementor-button-text"
@@ -4469,7 +4469,7 @@
                             <div class="elementor-button-wrapper">
                               <a
                                 class="elementor-button elementor-button-link elementor-size-sm"
-                                href="https://app.uniswap.org/#/swap?inputCurrency=eth&outputCurrency=0x5f1444e0795ec094f3bf841775b7430cd52f7b41"
+                                href="https://app.uniswap.org/#/swap?inputCurrency=eth&outputCurrency=0xcomingsoon"
                               >
                                 <span class="elementor-button-content-wrapper">
                                   <span class="elementor-button-text"
@@ -4490,7 +4490,7 @@
                             <div class="elementor-button-wrapper">
                               <a
                                 class="elementor-button elementor-button-link elementor-size-sm"
-                                href="https://www.dextools.io/app/en/ether/pair-explorer/0x5f1444e0795ec094f3bf841775b7430cd52f7b41"
+                                href="https://www.dextools.io/app/en/ether/pair-explorer/0xcomingsoon"
                               >
                                 <span class="elementor-button-content-wrapper">
                                   <span class="elementor-button-text"
@@ -4511,7 +4511,7 @@
                             <div class="elementor-button-wrapper">
                               <a
                                 class="elementor-button elementor-button-link elementor-size-sm"
-                                href="https://dexscreener.com/ethereum/0x5f1444e0795ec094f3bf841775b7430cd52f7b41"
+                                href="https://dexscreener.com/ethereum/0xcomingsoon"
                               >
                                 <span class="elementor-button-content-wrapper">
                                   <span class="elementor-button-text"
@@ -5324,7 +5324,7 @@
                                     <h2
                                       class="elementor-heading-title elementor-size-default"
                                     >
-                                      0x5f1444e0795ec094f3bf841775b7430cd52f7b41
+                                      0xcomingsoon
                                     </h2>
                                   </div>
                                 </div>
@@ -5429,7 +5429,7 @@
                                 <div class="elementor-button-wrapper">
                                   <a
                                     class="elementor-button elementor-button-link elementor-size-sm"
-                                    href="https://t.me/nanainueth"
+                                    href="https://t.me/Nana_Shiba_Inu"
                                   >
                                     <span
                                       class="elementor-button-content-wrapper"
